--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>TODO-List</title>
+<title>TODOリスト</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>TODO-List</h1>
+  <h1>TODO List</h1>
   <form>
     <input class="task_value" type="text" />
     <button class="task_submit" type="button">Add Task</button>
